wp-app/wp-content/themes/attract/assets/style/partials/single-case.scss
.hero-case {

  .hero-case-wrap {
    border-radius: 20px;
    overflow: hidden;
    position: relative;
    height: 100%;
    min-height: 649px;
    padding: 60px 50px;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;

    &__img {
      position: absolute;
      inset: 0;
      width: 100%;
      height: 100%;
      object-fit: cover;
      object-position: center;
      z-index: 0;
    }

    &:before {
      content: "";
      position: absolute;
      inset: 0;
      z-index: 1;
      background: #00031480;
      border-radius: 20px;
      transition: $transition;
    }

    @include _768 {
      padding: 24px;
    }

    .case-info {
      // position: relative;
      z-index: 2;
      display: grid;
      grid-template-columns: 1fr 320px;

      @include _1440 {
        grid-template-columns: 1fr;
        gap: 60px;
      }

      @include _768 {
        grid-template-columns: auto;

        .case-left-info {
          position: absolute;
          top: 24px;
          padding-right: 24px;
        }
      }
    }
  }

  .text-4 {
    font-weight: 500;
    background: $c-white;
    color: $c-black;
    padding: 7px 17px;
    border-radius: 300px;
    font-size: 14px;
    height: max-content;
    width: max-content;
    position: relative;
    margin-bottom: 15px;
  }

  .h3 {
    max-width: 850px;
    color: $c-white;
    position: relative;
    font-weight: 500;
  }

  .wrap-bottom {
    display: grid;
    grid-template-columns: 735px 1fr;
    gap: 135px;
    position: relative;
    color: $c-white;
    margin-top: 32px;

    @include _1024 {
      margin-top: 20px;
      grid-template-columns: 1fr;
      gap: 40px;
    }
  }

   .h5 {
      font-weight: 500;

    }

    .right {
      position: relative;
      display: flex;
      gap: 69px;


      .h6 {
        color: $c-white;
        font-size: 24px;
        font-weight: 500;
      }

      .elapsed-time .text-3, .year .text-3  {
        color: $c-white;
        font-size: 16px;
        text-transform: uppercase;
      }

      .elapsed-time, .year {
        display: flex;
        flex-direction: column;
        justify-content: flex-end;
        gap: 16px;
      }
    }
}

.case-next {
  position: relative;
  height: 700px;
  margin-bottom: -120px;
  background-color: #1844d0;
  z-index: 1;
  @include _1400 {
    margin-bottom: -100px;
  }
  @include _1024 {
    height: 768px;
    margin-bottom: -40px;
  }
  @include _768 {
    height: 1024px;
  }
  @include _680 {
    height: 700px;
  }
  &__bg {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
    z-index: -2;
  }
  &:before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.6) 100%), linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
    z-index: -1;
  }
  &__link {
    display: block;
    width: 100%;
    height: 100%;
    padding: 80px 0;
    color: #ffffff;
    &:hover {
      .case-next__header-icon {
        svg {
          transform: rotate(45deg);
          line {
            stroke: #1744D0;
          }
        }
      }
    }
    .container {
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      height: 100%;
    } 
  }
  &__header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    &-caption {
      font-size: 16px;
      line-height: 1em;
      text-transform: uppercase;
      opacity: 0.6;
    }
    &-icon {
      svg {
        transition: 0.22s ease-in;
      }
    }
  }
  &__title {
    font-weight: 400;
    line-height: 1em;
    letter-spacing: -0.04em;
  }
  &__tags {
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
    margin-top: auto;
    position: relative;
    z-index: 2;
    padding-top: 24px;

    @include _480 {
        gap: 6px;
    }
  }

  &__tag {
    color: $c-white;
    border: 1px solid $c-white;
    border-radius: 300px;
    padding: 7px 16px;

    @include _480 {
        padding: 6px 10px;
        font-size: 10px;
        line-height: 12px;
    }
  }
}

